--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/jest": "^24.0.25",
     "@types/node": "^13.1.2",
+    "husky": "^3.1.0",
     "jest": "^24.9.0",
     "ncp": "^2.0.0",
     "rmdir-cli": "^2.0.6",
