--- a/env-config.json
+++ b/env-config.json
@@ -2,21 +2,8 @@
   "LOCAL": {
     "region": "us-east-1",
     "secretManagerKey": "localhost/graphql-inversify-demo",
-    "databaseName": "movie_db"
-  },
-  "DEV": {
-    "region": "us-east-1",
-    "secretManagerKey": "localhost/graphql-inversify-demo",
-    "databaseName": "movie_db"
-  },
-  "STAGE": {
-    "region": "us-east-1",
-    "secretManagerKey": "localhost/graphql-inversify-demo",
-    "databaseName": "movie_db"
-  },
-  "PROD": {
-    "region": "us-east-1",
-    "secretManagerKey": "localhost/graphql-inversify-demo",
-    "databaseName": "movie_db"
+    "databaseName": "movie_db",
+    "localDbUserName": "root",
+    "localDbPassword": "banana"
   }
 }
