--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "build": "tsc -p tsconfig.build.json",
     "compile": "rmdir-cli dist && npm run build",
     "extract-local-env-config": "node -e \"console.log(Object.entries(require('./env-config.json').LOCAL).map(v => '--' + v[0] + ' ' + v[1]).join(' '))\"",
-    "localhost": "npm run compile && ncp node_modules dist/node_modules && npm run --silent extract-local-env-config | xargs -t sls offline --location dist --stage DEV || 0",
+    "localhost": "npm run compile && ncp node_modules dist/node_modules && npm run --silent extract-local-env-config | xargs -t sls offline --location dist --stage LOCAL || 0",
     "db": "cd db && docker-compose rm -f && docker-compose up",
     "offline": "stmux -w always -e ERROR -m beep,system -- [ \"npm run db\" .. \"npm run localhost\" ]",
     "lint": "tslint -p tsconfig.json -c tslint.json",
@@ -16,27 +16,30 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/jest": "^24.0.25",
-    "@types/node": "^13.1.2",
-    "husky": "^3.1.0",
-    "jest": "^24.9.0",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.6",
+    "husky": "^4.3.0",
+    "jest": "^26.6.2",
     "ncp": "^2.0.0",
     "rmdir-cli": "^2.0.6",
-    "serverless": "^1.60.4",
-    "serverless-offline": "^5.12.1",
+    "serverless": "^2.10.0",
+    "serverless-aurora-plugin": "^1.2.1",
+    "serverless-localstack": "^0.4.28",
+    "serverless-offline": "^6.8.0",
     "serverless-plugin-typescript": "^1.1.9",
+    "serverless-vpc-plugin": "^1.0.1",
     "stmux": "^1.8.0",
-    "ts-jest": "^24.2.0",
-    "ts-node": "^8.5.4",
-    "tslint": "^5.20.1",
-    "typescript": "^3.7.4"
+    "ts-jest": "^26.4.3",
+    "ts-node": "^9.0.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.0.5"
   },
   "dependencies": {
-    "apollo-server-lambda": "^2.9.15",
-    "aws-lambda": "^1.0.4",
+    "apollo-server-lambda": "^2.19.0",
+    "aws-lambda": "^1.0.6",
     "inversify": "^5.0.1",
     "inversify-binding-decorators": "^4.0.0",
-    "mysql": "^2.17.1",
-    "typeorm": "^0.2.22"
+    "mysql": "^2.18.1",
+    "typeorm": "^0.2.29"
   }
 }
