--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,21 @@
 # package directories
-node_modules
+/node_modules
 jspm_packages
 
 # Serverless directories
-.serverless/
+/.serverless
 
 #IDE's
-.idea/
+/.idea
 
 # Custom
 package-lock.json
 
 # Built files
-dist/
+/dist
+
+# Ignores compiled TypeScript files
+**/src/**/*.map
+**/src/**/*.js
+**/spec/**/*.map
+**/spec/**/*.js
